Update to pages

--- a/nc_native_people.html
+++ b/nc_native_people.html
@@ -35,7 +35,7 @@
             <p>Culturally Responsive Teaching and Guidelines<br>
                 <a href="https://www.dpi.nc.gov/students-families/student-support/american-indian-education/culturally-responsive-instructional-resources-teaching-american-indians ">Click here</a>
             </p>
-            <p>Brief History of Native People in NC<br>
+            <p>Brief History of Native People in NC (Culture, Music, Food, Folklore)<br>
                 <a href="pdfs/Brief_NC_History.pdf">Click here</a>
             </p>
             <p>NC Native American Museums and Native-Named Areas<br>
