--- a/waccamaw_siouan.html
+++ b/waccamaw_siouan.html
@@ -39,6 +39,9 @@
         <h2>Waccamaw Siouan Pow Wow<br>
             <a href="https://youtu.be/yNxwhFKDVrU">Click here</a>
         </h2>
+        <h2>Healthy Eating Iniatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/waccamaw-siouan-tribe/">Click here</a>
+        </h2>
     </div>
 
     <footer>
