--- a/coharie.html
+++ b/coharie.html
@@ -45,6 +45,9 @@
         <h2> Soil, Sorghum, Sovereignty: Community Gardens <br>
             <a href="https://youtu.be/KouD8kGbInM ">Click here</a>
         </h2>
+        <h2> Healthy Eating Initiatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/coharie-indian-tribe/">Click here</a>
+        </h2>
     </div>
 
     <footer>
