--- a/haliwa_saponi.html
+++ b/haliwa_saponi.html
@@ -42,6 +42,9 @@
         <h2> Haliwa-Saponi Powwow<br>
             <a href="https://youtu.be/PlrEaTIYhMQ ">Click here</a>
         </h2>
+        <h2> Healthy Eating Initiatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/haliwa-saponi-indian-tribe/">Click here</a>
+        </h2>
     </div>
 
     <footer>
