--- a/lumbee.html
+++ b/lumbee.html
@@ -48,6 +48,9 @@
         <h2>Pow Wow 2018<br>
             <a href="https://youtu.be/4oiiso78vCw">Click here</a>
         </h2>
+        <h2>Healthy Eating Initiatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/lumbee-tribe-of-north-carolina/">Click here</a>
+        </h2>
     </div>
 
     <footer>
