--- a/meherrin.html
+++ b/meherrin.html
@@ -42,6 +42,9 @@
         <h2>Historical Timeline<br>
             <a href="https://www.meherrinnation.org/13201.html">Click here</a>
         </h2>
+        <h2>Healthy Eating Initiatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/meherrin-indian-tribe/">Click here</a>
+        </h2>
     </div>
 
     <footer>
