--- a/occaneechi.html
+++ b/occaneechi.html
@@ -42,6 +42,9 @@
         <h2>Occaneechi Homeland Preservation Project<br>
             <a href="https://obsn.org/homeland-preservation-project/">Click here</a>
         </h2>
+        <h2>Healthy Eating Initiatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/occaneechi-band-of-the-saponi-nation/">Click here</a>
+        </h2>
     </div>
 
     <footer>
