--- a/sappony.html
+++ b/sappony.html
@@ -42,6 +42,9 @@
         <h2>The Three Sisters story<br>
             <a href="pdfs/The Three Sisters Story.pdf">Click here</a>
         </h2>
+        <h2>Healthy Eating Initiatives!<br>
+            <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/sappony/">Click here</a>
+        </h2>
     </div>
 
     <footer>
