Update to pages

--- a/coharie.html
+++ b/coharie.html
@@ -48,6 +48,9 @@
         <h2> Healthy Eating Initiatives!<br>
             <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/coharie-indian-tribe/">Click here</a>
         </h2>
+        <h2>Our People: The Coharie (short film)<br>
+            <a href="https://youtu.be/ffC7ZxRqPCs">Click here</a>
+        </h2>
     </div>
 
     <footer>
