--- a/occaneechi.html
+++ b/occaneechi.html
@@ -45,6 +45,12 @@
         <h2>Healthy Eating Initiatives!<br>
             <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/occaneechi-band-of-the-saponi-nation/">Click here</a>
         </h2>
+        <h2>Support Occaneechi Artists!<br>
+            <a href="http://obsn.org/home/shop/">Click here</a>
+        </h2>
+        <h2>Our People: Occaneechi Band of the Saponi Nation (short film)<br>
+            <a href="https://youtu.be/vkfNy-YJz_A">Click here</a>
+        </h2>
     </div>
 
     <footer>
