--- a/sappony.html
+++ b/sappony.html
@@ -45,6 +45,9 @@
         <h2>Healthy Eating Initiatives!<br>
             <a href="https://americanindianhealthyeating.unc.edu/healthy-native-north-carolinians-2/participating-tribes-and-urban-indian-organizations/sappony/">Click here</a>
         </h2>
+        <h2>Our People: The Sappony (short film)<br>
+            <a href="https://youtu.be/Z9Zk1co1Tik">Click here</a>
+        </h2>
     </div>
 
     <footer>
